fix brandlogo wrap issue, hero card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,7 +38,6 @@ form button {
 .input-field {
     background-color: #eeebe3;
     border-radius: 5px;
-    height: 45px;
 }
 
 .register-card {
@@ -47,7 +46,7 @@ form button {
 
 /* base.html */
 body {
-    margin-bottom: 200px;
+    margin-bottom: 10vh;
 }
 .page-footer, main:after {
     background-color: var(--main-color-bright);
@@ -73,6 +72,10 @@ footer {
 
 #footer-bottom {
     max-height: 4vh;
+}
+
+.brand-logo {
+    white-space: nowrap;
 }
 
 nav {
@@ -134,6 +137,31 @@ html {
     background-position: center;
     display: flex;
     height: 375px;
+}
+
+#hero-call-to-action {
+    display: inline-block;
+    position: relative;
+    height: 225px;
+    width: 200px;
+    margin: auto;
+    line-height: 18px;
+    right: 25vw;
+    color: #eeebe3;
+    border-radius: 5px;
+    background-color: rgba(0.8, 0.8, 0.8, 0.5)
+}
+
+@media screen and (max-width: 505px) {
+    #hero-call-to-action {
+        width: 140px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    #hero-call-to-action {
+        right: 20vw;
+    }
 }
 
 #banner-bottom {
